@@ -3,6 +3,7 @@ Version: 0.2.0
 Date: ??.??.2022
   Features:
     - Add support for Picker Dollies.
+    - Added a breathing light to the dock.
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.5
 Date: 24.07.2022
